--- a/css/trangchu.css
+++ b/css/trangchu.css
@@ -102,3 +102,41 @@ header ul li> i{
 .container ul li:hover .menu-container{
     display: block;
 }
+.slider{
+    width: 100%;
+    height: 500px;
+    position: relative;
+}
+.slider .slider-content{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    transition: all 0.5s ease-in-out;
+}
+.slider .slider-content .slider-content-left{
+    width: 50%;
+    height: 100%;
+    position: absolute;
+    left: 25%;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.slider .slider-content .slider-content-left-bottom{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} 
+.slider-product-title{
+    font-size: 50px;
+    font-weight: bold;
+    color: white;
+    text-align: center;
+    text-transform: uppercase;
+}
