--- a/css/trangchu.css
+++ b/css/trangchu.css
@@ -3,12 +3,10 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;  
 }
 header {
-    width: auto;
-    height: auto;
-  background-color: yellow;
+    background-color: yellow;
 }
 header ul {
     list-style-type: none;
@@ -44,7 +42,7 @@ header ul li input {
 header ul li> i{
     position: absolute;
     font-size: 40px;
-    right: 40%;
+    right: 580px;
     top: 25px;
     color: black;
 }
@@ -78,7 +76,7 @@ header ul li> i{
     position: absolute;
     background-color: #f5f0f0ef;
     display: none;
-    width: 100%;
+    
     left: 0;
     top: 100%;
 }
@@ -103,12 +101,13 @@ header ul li> i{
     display: block;
 }
 .slider{
-    width: 100%;
+
     height: 500px;
     position: relative;
 }
 .slider .slider-content{
-    width: 100%;
+    right:20%;
+    width: 60%;
     height: 100%;
     position: absolute;
     transition: all 0.5s ease-in-out;
@@ -128,7 +127,7 @@ header ul li> i{
     height: 100%;
     position: absolute;
     left: 0;
-    top: 50%;
+    top: 65%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -136,15 +135,29 @@ header ul li> i{
 .slider-product{
     background-color: purple;
     position: relative;
+    padding: 20px;
     margin: 100px;
+    top: 80px;
 }
 .slider-product-title{
     font-size: 50px;
     font-weight: bold;
     color: white;
     text-align: center;
-    text-transform: uppercase;
+
 }
 .slider-product-items{
+  width: 100%;
+  display: flex;
   
+}
+.slider-product-item ul{
+    
+}
+.slider-product-item{
+    background-color: white;
+    width: 19%;
+}
+.slider-product-item img{
+    width: 100%;
 }
