--- a/css/trangchu.css
+++ b/css/trangchu.css
@@ -48,6 +48,7 @@ header ul li> i{
 }
 .container{
     background-color: #0e0909;
+    
 }
 .container ul {
     list-style-type: none;
@@ -55,12 +56,13 @@ header ul li> i{
     justify-content: space-between;
     align-items: center;
 }
-.container>ul>li {
+.container> ul> li {
+    position: relative;
    line-height: 30px;
     cursor: pointer;
-    padding: 10px 55px;
+    
     transition: all 0.3s ease-in-out;
-    position: relative;
+    padding: 10px 55px;
 }
 
 .container>ul>li:hover {
@@ -71,19 +73,18 @@ header ul li> i{
     color: white;
     font-size: 20px;
     font-weight: bold;
+
 }
 .menu-container {
     position: absolute;
-    background-color: #f5f0f0ef;
-    display: none;
-    
-    left: 0;
-    top: 100%;
+    background-color: #d42f2fef;
+    z-index: 1;
+   top: 100%;
+
 }
 .menu-container ul{
+
     flex-direction: column;
-    padding: 15px ;
-    
 }
 .menu-container ul li{
     font-size: 20px;
@@ -105,14 +106,15 @@ header ul li> i{
     height: 500px;
     position: relative;
 }
-.slider .slider-content{
+ .slider-content{
     right:20%;
     width: 60%;
     height: 100%;
+    z-index: 0;
     position: absolute;
     transition: all 0.5s ease-in-out;
 }
-.slider .slider-content .slider-content-left{
+ .slider-content .slider-content-left{
     width: 50%;
     height: 100%;
     position: absolute;
@@ -122,7 +124,7 @@ header ul li> i{
     justify-content: center;
     align-items: center;
 }
-.slider .slider-content .slider-content-left-bottom{
+ .slider-content-left-bottom{
     width: 100%;
     height: 100%;
     position: absolute;
@@ -138,6 +140,8 @@ header ul li> i{
     padding: 20px;
     margin: 100px;
     top: 80px;
+    height: auto;
+    
 }
 .slider-product-title{
     font-size: 50px;
@@ -147,17 +151,28 @@ header ul li> i{
 
 }
 .slider-product-items{
-  width: 100%;
-  display: flex;
-  
+    width: 100%;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    display: grid;
 }
+
 .slider-product-item ul{
-    
+    list-style : none;
+    margin-left: 5px;
+    text-align: center;
+    width: 100%;
+}
+.slider-product-item ul li{
+    margin-bottom: 10px;
 }
 .slider-product-item{
     background-color: white;
-    width: 19%;
+    width: 85%;
+    border: 2px solid black;
+    
+    margin: 10px;
 }
 .slider-product-item img{
-    width: 100%;
+    width: 200px;
+    height: 200px;
 }
