--- a/css/trangchu.css
+++ b/css/trangchu.css
@@ -48,7 +48,6 @@ header ul li> i{
 }
 .container{
     background-color: #0e0909;
-    
 }
 .container ul {
     list-style-type: none;
@@ -56,13 +55,12 @@ header ul li> i{
     justify-content: space-between;
     align-items: center;
 }
-.container> ul> li {
-    position: relative;
+.container>ul>li {
    line-height: 30px;
     cursor: pointer;
-    
-    transition: all 0.3s ease-in-out;
     padding: 10px 55px;
+    transition: all 0.3s ease-in-out;
+    position: relative;
 }
 
 .container>ul>li:hover {
@@ -73,18 +71,20 @@ header ul li> i{
     color: white;
     font-size: 20px;
     font-weight: bold;
-
 }
 .menu-container {
     position: absolute;
-    background-color: #d42f2fef;
+    background-color: #f5f0f0ef;
+    display: none;
+    left: 0;
+    width: 100%;
     z-index: 1;
-   top: 100%;
-
+    top: 100%;
 }
 .menu-container ul{
-
     flex-direction: column;
+    padding: 15px ;
+    
 }
 .menu-container ul li{
     font-size: 20px;
@@ -106,15 +106,17 @@ header ul li> i{
     height: 500px;
     position: relative;
 }
- .slider-content{
+.slider .slider-content{
     right:20%;
     width: 60%;
     height: 100%;
-    z-index: 0;
     position: absolute;
     transition: all 0.5s ease-in-out;
 }
- .slider-content .slider-content-left{
+.slider-content{
+    z-index: 0;
+}
+     .slider-content-left{
     width: 50%;
     height: 100%;
     position: absolute;
@@ -175,4 +177,32 @@ header ul li> i{
 .slider-product-item img{
     width: 200px;
     height: 200px;
+}
+.foot-content{
+    background-color: #eee1e1e8;
+}
+.foot-content> ul{
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    margin: 0 50px;
+}
+.foot-content .foot-content-container{
+    
+    list-style-type: none;
+    display: block;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.foot-content .foot-content-container li{
+    padding: 10px 0;
+}
+.foot-content .foot-content-container li a{
+    text-decoration: none;
+    color: rgb(5, 4, 4);
+    font-size: 20px;
+    font-weight: bold;
+}
+.foot-content .foot-content-container li a:hover{
+    color: rgb(224, 123, 202);
 }
