--- a/ProductPage/HeaderFooter.css
+++ b/ProductPage/HeaderFooter.css
@@ -99,7 +99,7 @@
     width: max-content;
     height: 50px;
     margin-left: 12px;
-    font-family: 'Sacramento', cursive;
+    font-family: 'Lucida Sans Unicode', sans-serif;
     font-size: 2.5rem;
   }
   .nav__search {
@@ -125,7 +125,7 @@
     float: right;
     width: 120px;
     height: 100%;
-    background-color: var(--orange);
+    background-color: black;
     border-radius: 0 10px 10px 0;
     border: 0;
   }
