--- a/ProductPage/ProductPage.css
+++ b/ProductPage/ProductPage.css
@@ -467,8 +467,8 @@ form .social {
   margin-top: 15px;
 }
 .product__filter--btn.active{
-  background-color: var(--orange);
-  color: white;
+  background-color: grey;
+  color: black;
 }
 .product__box {
   display: grid;
@@ -995,10 +995,11 @@ h3.product__modal__details__name {
   color: #000;
   float: left;
   padding: 8px 16px;
+  background-color: white;
 }
 .previous .active,
 .next.active {
-  background-color: var(--orange);
+  background-color: var(--black);
   color: white;
   border-radius: 10%;
 }
@@ -1010,7 +1011,7 @@ h3.product__modal__details__name {
   padding: 8px 16px;
 }
 .product__pagination a.active {
-  background-color: var(--orange);
+  background-color: var(--black);
   color: white;
   border-radius: 10%;
 }
