--- a/Orderpage/orderpage.css
+++ b/Orderpage/orderpage.css
@@ -85,8 +85,9 @@ body {
 .nav__link ul li a {
   display: block;
   text-align: center;
-  /* padding-right: 20px; */
+   padding-right: 20px; 
   text-decoration: none;
+  color: #000000;
 }
 .nav__center {
   display: flex;  
