--- a/ProductPage/ProductPage.css
+++ b/ProductPage/ProductPage.css
@@ -31,8 +31,8 @@ body {
 
 
 
-/* Header Menu STARTS */
-/* .header {
+Header Menu STARTS */
+.header {
   display: flex;
   width: 1140px;
   height: 100px;
@@ -73,6 +73,7 @@ body {
   display: block;
   text-align: center;
   text-decoration: none;
+  color: #000000;
 }
 .nav__center {
   display: flex;
@@ -126,7 +127,7 @@ body {
   background-color: var(--orange);
   border-radius: 0 10px 10px 0;
   border: 0;
-} */
+} 
 .bordernonuser, .borderadmin, .borderuser {
   width: max-content;
   display: flex;
