--- a/index.css
+++ b/index.css
@@ -32,6 +32,11 @@ body {
 
 
 Header Menu STARTS */
+a {
+  text-decoration: none;
+  color: black;
+}
+
 .header {
     display: flex;
     width: 1140px;
@@ -91,10 +96,10 @@ Header Menu STARTS */
   .nav__logo--icon {
     width: 50px;
     height: 50px;
-    background-color: gray;
+    background-color: rgb(249, 239, 239);
   }
   .nav__logo--name {
-    width: max-content;
+    width: 50px;
     height: 50px;
     margin-left: 12px;
     font-family: 'Sacramento', cursive;
