--- a/index.css
+++ b/index.css
@@ -114,8 +114,9 @@ a {
   .nav__search--input {
     display: flex;
     float: left;
-    width: 540px;
-    height: 100%;
+    margin-left: 60px;
+    width: 670px;
+    height: 50px;
     padding-left: 20px;
     text-align: left;
     border-radius: 10px 0 0 10px;
@@ -126,9 +127,9 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
-    float: right;
+    float: left;
     width: 120px;
-    height: 100%;
+    height: 50px;
     background-color: var(--orange);
     border-radius: 0 10px 10px 0;
     border: 0;
