--- a/index.css
+++ b/index.css
@@ -1476,3 +1476,9 @@ a {
   background: var(--orange);
   font-weight: bold;
 }
+.advan select{
+  margin-top: 10px;
+  width: 250px;
+  height: 35px;
+  border-radius: 10px;
+}
