--- a/indexdangnhap.css
+++ b/indexdangnhap.css
@@ -1475,3 +1475,9 @@ a {
     background: var(--orange);
     font-weight: bold;
   }
+  .advan select{
+    margin-top: 10px;
+    width: 250px;
+    height: 35px;
+    border-radius: 10px;
+  }
