--- a/css/loader.css
+++ b/css/loader.css
@@ -35,3 +35,19 @@
     transform: rotate(1turn);
     }
 }
+.page-item {
+    cursor: pointer;
+    display: inline-block;
+    border: 2px solid #000;
+    height: 30px;
+    width: 30px;
+    text-align: center;
+    line-height: 27px;
+    border-radius: 50%;
+    font-size: 15px;
+  }
+.page-item.--active {
+    background-color: var(--color-red);
+    color: var(--color-white);
+    border: 2px solid var(--color-red);
+  }
